MUCK MAN V2 SCANNING IN FULL FORCE

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # modify this file to change project properties
 teamB=basicplayer
-teamA=oldplayer
+teamA=examplefuncsplayer
 maps=circle
 source=src
 gpr.user=battlecodedownloadpackage
