quick fixes: bigger bidders if we have more inf, floor on pol size (50)

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # modify this file to change project properties
-teamB=basicplayer
-teamA=examplefuncsplayer
+teamB=oldplayer
+teamA=basicplayer
 maps=circle
 source=src
 gpr.user=battlecodedownloadpackage
