--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # modify this file to change project properties
-teamA=basicplayer
-teamB=oldplayer
-maps=Rainbow
+teamB=basicplayer
+teamA=oldplayer
+maps=quadrants
 source=src
 gpr.user=battlecodedownloadpackage
 profilerEnabled=false
